--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -163,6 +163,8 @@
       padding-left: 20px
       padding-right: 20px
       line-height: 23px
+  .reviews-slider__text
+    text-align: left
 @media (max-width: 320px)
   .logo
     width: 99px
