--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -50,7 +50,7 @@
     font-weight: 300
     font-size: 14px
     line-height: 18px
-    color: #BDBDBD
+    color: #757575
   &__button
     position: absolute
     min-width: 65px
